--- a/docs/tools-addons-techniques/addons/dolly-zoom.mdx
+++ b/docs/tools-addons-techniques/addons/dolly-zoom.mdx
@@ -14,11 +14,11 @@ tags: [camera, animation, effect]
 <div style={{display: 'flex', justifyContent: 'space-between', alignItems: 'center', flexWrap: 'wrap', marginBottom: '20px', gap: '15px'}}>
   <div style={{display: 'flex', gap: '8px', flexWrap: 'wrap'}}>
     <span style={{backgroundColor: '#4caf50', color: 'white', padding: '4px 10px', borderRadius: '12px', fontSize: '12px', fontWeight: 'bold'}}>BEGINNER</span>
-    <span style={{backgroundColor: '#EF4C3C', color: 'white', padding: '4px 10px', borderRadius: '12px', fontSize: '12px', fontWeight: 'bold'}}>CAMERA</span>
+ 
   </div>
   <div style={{display: 'flex', alignItems: 'center', gap: '6px', color: '#666', fontSize: '14px', whiteSpace: 'nowrap'}}>
     <span style={{fontSize: '16px'}}>📖</span>
-    <span>3 min read</span>
+    <span>5 min read</span>
   </div>
 </div>
 
@@ -56,54 +56,37 @@ The **Dolly Zoom add-on** implements the classic cinematic technique in Blender.
 
 ---
 
+import FeatureCard from '@site/src/components/FeatureCard';
+import FeatureCardGrid from '@site/src/components/FeatureCardGrid';
+
 ## Key Features
 
-<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(280px, 1fr))', gap: '20px', marginBottom: '30px'}}>
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#8DF917', padding: '15px', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-video" style={{fontSize: '20px', color: '#333'}}></i>
-      <h4 style={{margin: 0, color: '#333'}}>Proportional Perspective</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Executes synchronized camera movement (dolly) and focal length adjustment (zoom), resulting in the characteristic dolly zoom effect.</p>
-    </div>
-  </div>
+<FeatureCardGrid>
+  <FeatureCard 
+    title="Proportional Perspective" 
+    headerColor="#6dfb72"
+    textColor="#333"
+    icon="fa-solid fa-video"
+  >
+    <p style={{margin: 0}}>Executes synchronized camera movement (dolly) and focal length adjustment (zoom), resulting in the characteristic dolly zoom effect.</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#1C75BC', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-crosshairs" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>3D Cursor Pivot</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>The entire transformation pivots around the <strong>3D Cursor</strong>. Positioning the cursor on a target object anchors that object's composition.</p>
-    </div>
-  </div>
+  <FeatureCard 
+    title="3D Cursor Pivot" 
+    headerColor="#1C75BC"
+    icon="fa-solid fa-crosshairs"
+  >
+    <p style={{margin: 0}}>The entire transformation pivots around the <strong>3D Cursor</strong>. Positioning the cursor on a target object anchors that object's composition.</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#EF4C3C', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-gauge-high" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>Camera Matching</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Facilitates precise manipulation of the scene's perspective, crucial for aligning 3D geometry with photographic references.</p>
-    </div>
-  </div>
-</div>
+  <FeatureCard 
+    title="Camera Matching" 
+    headerColor="#EF4C3C"
+    icon="fa-solid fa-gauge-high"
+  >
+    <p style={{margin: 0}}>Facilitates precise manipulation of the scene's perspective, crucial for aligning 3D geometry with photographic references.</p>
+  </FeatureCard>
+</FeatureCardGrid>
 
 ---
 
@@ -140,4 +123,42 @@ The Dolly Zoom function acts on the **Active Camera**.
 ## Summary
 
 The Dolly Zoom add-on facilitates the synchronized manipulation of camera distance and focal length, making it an effective tool for achieving a dramatic cinematic effect. Its primary value in 3D reconstruction is the ability to iteratively adjust the camera's perspective—pivoting around the **3D Cursor**—to achieve precise **manual camera matching** with reference imagery.
+
+---
+
+## Documentation for Methodology
+
+Understanding how to use the Dolly Zoom tool is only half the work—documenting your perspective adjustments properly is what makes your investigation defensible and reproducible.
+
+<details>
+<summary><strong>What to document when using Dolly Zoom</strong></summary>
+
+### In Your Method Section
+
+When describing perspective correction in your methodology, note that the Dolly Zoom add-on was used for iterative camera matching. Specify the pivot point location (3D Cursor position), the reference objects used for alignment verification, and record the final camera parameters: position coordinates and focal length. If Dolly Zoom was used to refine an initial fSpy calibration, document both the starting and ending focal lengths.
+
+### In Your Decision Log
+
+Record the following when using Dolly Zoom:
+- Initial camera position and focal length before adjustment
+- 3D Cursor placement (what object/feature it was anchored to and why)
+- Reference objects used to verify alignment at different depths (near/far)
+- Number of adjustment iterations performed
+- Final camera position and focal length after correction
+- Whether this was a refinement of prior calibration (e.g., fSpy) or standalone matching
+- Date performed
+
+### Verification
+
+To verify your Dolly Zoom adjustment is correct, check alignment of objects at multiple depths in the scene. The pivot point object should remain stationary while background and foreground elements shift during adjustment—if the pivot point moves, the 3D Cursor was misplaced. After final adjustment, overlay geometric primitives at near, mid, and far distances; all should align with their corresponding reference image features simultaneously.
+
+### Common Limitations
+
+Dolly Zoom adjusts perspective by changing both position and focal length together—it cannot correct for lens distortion, principal point offset, or rotation errors. If the underlying camera match has fundamental errors (wrong vanishing points, uncorrected distortion), Dolly Zoom will not fix them. The technique requires a clearly identifiable pivot point in the scene; images without distinct foreground objects at known positions are difficult to match. Very wide-angle or telephoto extremes may produce unrealistic results.
+
+### Example Methodology Statement
+
+> "Following initial camera calibration via fSpy, perspective refinement was performed using the Dolly Zoom add-on (Blender 4.2). The 3D Cursor was positioned at [pivot object, e.g., 'the base of the traffic signal post'], which served as the compositional anchor. Iterative adjustment was performed until objects at varying depths—[near reference] and [far reference]—aligned simultaneously with the background photograph. Starting focal length was [X] mm; final corrected focal length was [Y] mm, with camera position shifted [Z] meters along the view axis. Verification was performed by overlaying cube primitives at three depth positions, confirming consistent perspective alignment across the scene."
+
+</details>
 
