--- a/docs/tools-addons-techniques/addons/looptools.mdx
+++ b/docs/tools-addons-techniques/addons/looptools.mdx
@@ -59,54 +59,37 @@ The **Loop Tools add-on** is a powerful, free extension built into Blender, desi
 
 ---
 
+import FeatureCard from '@site/src/components/FeatureCard';
+import FeatureCardGrid from '@site/src/components/FeatureCardGrid';
+
 ## Key Features
 
-<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(280px, 1fr))', gap: '20px', marginBottom: '30px'}}>
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#8DF917', padding: '15px', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-shapes" style={{fontSize: '20px', color: '#333'}}></i>
-      <h4 style={{margin: 0, color: '#333'}}>Topology Structuring</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Enables the creation of clean, perfect circular shapes (<strong>Circle</strong>) and seamlessly connects complex, distant boundaries with generated mesh (<strong>Bridge</strong>).</p>
-    </div>
-  </div>
+<FeatureCardGrid>
+  <FeatureCard 
+    title="Topology Structuring" 
+    headerColor="#6dfb72"
+    textColor="#333"
+    icon="fa-solid fa-shapes"
+  >
+    <p style={{margin: 0}}>Enables the creation of clean, perfect circular shapes (<strong>Circle</strong>) and seamlessly connects complex, distant boundaries with generated mesh (<strong>Bridge</strong>).</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#1C75BC', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-ruler-combined" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>Geometric Correction</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Provides precise controls for leveling geometry onto a single plane (<strong>Flatten</strong>) or ensuring selected vertices are uniformly spaced (<strong>Space</strong>).</p>
-    </div>
-  </div>
+  <FeatureCard 
+    title="Geometric Correction" 
+    headerColor="#1C75BC"
+    icon="fa-solid fa-ruler-combined"
+  >
+    <p style={{margin: 0}}>Provides precise controls for leveling geometry onto a single plane (<strong>Flatten</strong>) or ensuring selected vertices are uniformly spaced (<strong>Space</strong>).</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#EF4C3C', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-bezier-curve" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>Curvature Control</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Allows for calculated interpolation of vertices into smooth lines (<strong>Curve</strong>) or globally smoothing rough geometry while preserving boundaries (<strong>Relax</strong>).</p>
-    </div>
-  </div>
-</div>
+  <FeatureCard 
+    title="Curvature Control" 
+    headerColor="#EF4C3C"
+    icon="fa-solid fa-bezier-curve"
+  >
+    <p style={{margin: 0}}>Allows for calculated interpolation of vertices into smooth lines (<strong>Curve</strong>) or globally smoothing rough geometry while preserving boundaries (<strong>Relax</strong>).</p>
+  </FeatureCard>
+</FeatureCardGrid>
 
 ---
 
