--- a/docs/tools-addons-techniques/addons/measureit.mdx
+++ b/docs/tools-addons-techniques/addons/measureit.mdx
@@ -24,74 +24,132 @@ tags: [measurement, precision, architecture, built-in]
 
 ---
 
-## Introduction
+<div style={{
+  position: 'relative',
+  paddingBottom: '56.25%',
+  height: 0,
+  overflow: 'hidden',
+  maxWidth: '100%',
+  marginBottom: '30px',
+  borderRadius: '8px',
+  boxShadow: '0 4px 6px rgba(0,0,0,0.1)'
+}}>
+  <iframe
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+      border: 0
+    }}
+    src="https://www.youtube.com/embed/7hKCDfYOsC8"
+    title="YouTube video player"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen>
+  </iframe>
+</div>
 
-MeasureIt is an addon designed to display measures in the 3D Viewport. It can show segment lengths, angles, and areas. The measurements are rendered as an overlay and can be rendered to an image, making it perfect for technical drawings or architectural visualization.
+## Introduction to the MeasureIt Add-on
 
----
+The **MeasureIt** add-on is a powerful, built-in Blender tool designed to bring **CAD (Computer-Aided Design) functionality** to the 3D viewport. It allows users to create **dynamic, non-destructive measurements** directly on their 3D models and scenes.
+
+This functionality is essential for any job requiring **exact measurements**, such as:
+* **Architectural Projects:** Creating floor plans and blueprints with precise dimensions.
+* **Technical Design:** Ensuring components meet specific size and tolerance requirements.
+* **3D Printing:** Verifying object dimensions before production.
+
+The measurements, which include distances, angles, arcs, and areas, are dynamic, meaning they **update in real-time** as the mesh or objects are moved.
+
+***
 
 ## Key Features
 
-<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(280px, 1fr))', gap: '20px', marginBottom: '30px'}}>
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#8DF917', padding: '15px', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-ruler" style={{fontSize: '20px', color: '#333'}}></i>
-      <h4 style={{margin: 0, color: '#333'}}>Distance</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Measure the exact distance between vertices, edges, or objects in the scene.</p>
-    </div>
-  </div>
+import FeatureCard from '@site/src/components/FeatureCard';
+import FeatureCardGrid from '@site/src/components/FeatureCardGrid';
+
+<FeatureCardGrid>
+  <FeatureCard 
+    title="Distance" 
+    headerColor="#6dfb72"
+    textColor="#333"
+    icon="fa-solid fa-ruler"
+  >
+    <p style={{margin: 0}}>Measure the exact distance between vertices, edges, or objects in the scene.</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#1C75BC', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-compass-drafting" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>Angles & Areas</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Calculate and display angles between edges or the surface area of faces.</p>
-    </div>
-  </div>
+  <FeatureCard 
+    title="Angles & Areas" 
+    headerColor="#1C75BC"
+    icon="fa-solid fa-compass-drafting"
+  >
+    <p style={{margin: 0}}>Calculate and display angles between edges or the surface area of faces.</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#EF4C3C', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-print" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>Render Output</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Render the measurement overlays to an image for documentation purposes.</p>
-    </div>
-  </div>
-</div>
+  <FeatureCard 
+    title="Render Output" 
+    headerColor="#EF4C3C"
+    icon="fa-solid fa-print"
+  >
+    <p style={{margin: 0}}>Render the measurement overlays to an image for documentation purposes.</p>
+  </FeatureCard>
+</FeatureCardGrid>
 
 ---
+
+
 
 ## Installation & Usage
 
 ### Installation
-This addon is included with Blender.
 
-1. Go to **Edit > Preferences > Add-ons**.
-2. Search for **MeasureIt**.
-3. Enable the checkbox.
+1.  **Enable Add-on:** Go to **Edit** > **Preferences** > **Add-ons** tab. Find **"MeasureIt"** and check the box to enable it.
+2.  **Access Panel:** The tool is located in the 3D viewport sidebar (press **N** key) under the **View** tab.
+3.  **Display Measurements:** Click the **Show** button in the Measure Tools panel. This must be done every time you open the file to display existing measurements.
 
 ### Usage
-Find the **MeasureIt Tools** in the Sidebar (N-panel) under the **View** tab. Select elements in Edit Mode and click the "Segment" or "Angle" buttons to add a measurement.
+
+Most measuring tools require you to be in **Edit Mode** (`Tab` key) with the mesh selected.
+
+| Feature | Setup | Description |
+| :--- | :--- | :--- |
+| **Segment** | Select **two** vertices. | Measures the **length** of a line segment between the two selected points. This measurement is **dynamic** and updates when vertices are moved. |
+| **Angle** | Select **three** vertices. | Calculates the **angle** formed by the three selected vertices. |
+| **Arc** | Select **three** vertices. | Calculates data for an **arc** defined by the three selected points, including options to draw the full circle. |
+| **Area** | Switch to **Face Mode** and select one or more faces. | Calculates and displays the dynamically updated **surface area** of the selected faces. The calculated area is filled with a custom color. |
+| **Label** | Select **one** vertex. | Adds a custom **text label** to a specific point without an associated measurement value. |
+| **X / Y / Z** | Select **one** vertex. | Creates a measurement from the selected vertex point to the object's **origin** (the orange dot) along the specified axis (X, Y, or Z). |
+
+#### 3. Measurement Creation (Object Mode)
+
+These tools are found when the selection is in **Object Mode**.
+
+| Feature | Setup | Description |
+| :--- | :--- | :--- |
+| **Link** | Select **two** objects, or a vertex on each object. | Measures the **distance** between the two objects. By default, it uses their origins; if vertices are selected, it measures between those specific points. |
+| **Origin** | Select one or more objects. | Measures the distance from the **Scene Origin** (where the XYZ axes cross) to the selected object's origin. |
+| **Annotation** | Select the button. | Creates a free-floating **text label** (stored as an Empty object) that can be placed anywhere in the scene. |
+
+#### 4. Feature Configuration and Customization
+
+All created measurements appear in the **Items** list and can be individually configured. Global settings are found in the **Configuration** menu.
+
+| Customization Setting | Location | Description |
+| :--- | :--- | :--- |
+| **Labeling** | Item Options | Add custom text to any measurement by typing in the provided box and enabling the **Text** checkbox. |
+| **Color Control** | Item Options / Configuration | Change the color of individual measurements (under *Items*) or set a default color for future measurements (under *Configuration*). |
+| **Units and Precision** | Configuration | Change the display units (meters, centimeters, feet) and adjust the numerical precision (number of decimal places). |
+| **Override All** | Measure Tools | Forces all existing and future measurements to adopt the current settings (color, font, etc.) defined in the **Configuration** menu. |
+| **Sum Feature** | Measure Tools | Select a measurement **Group (A-Z)** and then create multiple segments (e.g., around a floor plan). The add-on will dynamically display the **total cumulative length** of all segments in that group. |
+| **Scale** | Configuration | **Globally scales up** all measurement values by a set ratio. Useful for modeling small objects that represent massive real-world structures (e.g., a skyscraper). |
+
+#### 5. Mesh Debug and Rendering
+
+* **Mesh Debug Menu:** Displays internal mesh data, useful for developers and complex scene management.
+  * **Index:** Shows the position of vertices, edges, or faces in the object's data array.
+  * **Location:** Shows the actual real-world XYZ coordinates of selected mesh elements.
+  * **Normals:** Displays the direction a polygon is facing, helping identify and fix shading issues.
+* **Render Section:** Allows you to **render the scene with the measurement lines and numbers captured**. This is primarily used to create dimensioned **blueprints** or technical drawings directly from the 3D view.
 
 ---
 
