--- a/docs/tools-addons-techniques/addons/polychase.mdx
+++ b/docs/tools-addons-techniques/addons/polychase.mdx
@@ -13,8 +13,7 @@ tags: [camera, animation, walkthrough]
 
 <div style={{display: 'flex', justifyContent: 'space-between', alignItems: 'center', flexWrap: 'wrap', marginBottom: '20px', gap: '15px'}}>
   <div style={{display: 'flex', gap: '8px', flexWrap: 'wrap'}}>
-    <span style={{backgroundColor: '#4caf50', color: 'white', padding: '4px 10px', borderRadius: '12px', fontSize: '12px', fontWeight: 'bold'}}>BEGINNER</span>
-    <span style={{backgroundColor: '#EF4C3C', color: 'white', padding: '4px 10px', borderRadius: '12px', fontSize: '12px', fontWeight: 'bold'}}>CAMERA</span>
+    <span style={{backgroundColor: '#faab02ff', color: 'white', padding: '4px 10px', borderRadius: '12px', fontSize: '12px', fontWeight: 'bold'}}>INTERMEDIATE</span>
   </div>
   <div style={{display: 'flex', alignItems: 'center', gap: '6px', color: '#666', fontSize: '14px', whiteSpace: 'nowrap'}}>
     <span style={{fontSize: '16px'}}>📖</span>
@@ -24,57 +23,133 @@ tags: [camera, animation, walkthrough]
 
 ---
 
+<div style={{
+  position: 'relative',
+  paddingBottom: '56.25%',
+  height: 0,
+  overflow: 'hidden',
+  maxWidth: '100%',
+  marginBottom: '30px',
+  borderRadius: '8px',
+  boxShadow: '0 4px 6px rgba(0,0,0,0.1)'
+}}>
+  <iframe
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+      border: 0
+    }}
+    src="https://www.youtube.com/embed/W4HNmcjFuLw"
+    title="YouTube video player"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen>
+  </iframe>
+</div>
+
 ## Introduction
 
-*Note: Specific details for "PolyChase" were not found in standard repositories. This might be a custom or less common addon.*
+Polychase is a free, open-source add-on for Blender that performs **mesh-based 3D motion tracking**.
 
-Generally, "Chase" tools in Blender allow a camera to smoothly follow a target object with delay and damping. This is useful for creating third-person views, smooth fly-throughs, or following a moving subject without rigid mechanical movement.
+Its core function is to track the movement (pose, or rotation and translation) of a **rigid 3D object** (mesh) within video footage. It is an alternative to commercial tools like GeoTracker.
+
+The process relies on:
+1.  **3D Mesh Input:** Requiring a 3D model of the object being tracked.
+2.  **PnP Solving:** Utilizing the Perspective-n-Point (PnP) problem, where 3D points on the mesh are matched to 2D locations in the video.
+3.  **Optical Flow:** Automatically generating correspondences using sparse optical flow data.
+4.  **User-Guided Correction:** Allowing manual correction via a "bin mode" (interactive 3D pinning).
+5.  **Refinement:** Using factor graph optimization (a form of bundle adjustment) to globally smooth and refine the final motion trajectory.
+
+The outcome is a 3D mesh that remains accurately "glued" to the moving object throughout the video sequence.
 
 ---
 
+import FeatureCard from '@site/src/components/FeatureCard';
+import FeatureCardGrid from '@site/src/components/FeatureCardGrid';
+
 ## Key Features
 
-<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(280px, 1fr))', gap: '20px', marginBottom: '30px'}}>
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#8DF917', padding: '15px', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-video" style={{fontSize: '20px', color: '#333'}}></i>
-      <h4 style={{margin: 0, color: '#333'}}>Smooth Follow</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Makes the camera follow a target object with adjustable smoothness and lag.</p>
-    </div>
-  </div>
+<FeatureCardGrid>
+  <FeatureCard 
+    title="Smooth Follow" 
+    headerColor="#6dfb72"
+    textColor="#333"
+    icon="fa-solid fa-video"
+  >
+    <p style={{margin: 0}}>Makes the camera follow a target object with adjustable smoothness and lag.</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#1C75BC', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-sliders" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>Damping Control</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Control how quickly the camera reacts to the target's movement.</p>
-    </div>
-  </div>
-</div>
+  <FeatureCard 
+    title="Damping Control" 
+    headerColor="#1C75BC"
+    icon="fa-solid fa-sliders"
+  >
+    <p style={{margin: 0}}>Control how quickly the camera reacts to the target's movement.</p>
+  </FeatureCard>
+</FeatureCardGrid>
 
 ---
 
 ## Installation & Usage
 
 ### Installation
-1. Install the script/addon via **Edit > Preferences > Add-ons**.
+1. Download the addon from [https://github.com/theartful/polychase](https://github.com/theartful/polychase)
+2. Install the script/addon via **Edit > Preferences > Add-ons**.
 
 ### Usage
-Select the camera, then the target object, and activate the tool from the addon's panel or menu.
+
+A step-by-step guide for using the Polychase add-on for motion tracking in Blender:
+
+***
+
+#### 1. Scene Setup and Video Analysis
+
+This phase prepares the scene and extracts initial motion data from the video.
+
+1.  **Import Mesh:** Import the **3D mesh** of the rigid object intended for tracking.
+2.  **Create Tracker:** Create a new Polychase tracker object.
+3.  **Define Inputs:** Select the appropriate **geometry** (the mesh), the **camera**, and the **video clip** within the tracker settings.
+4.  **Set Database:** Specify a location to save the **SQLite database file**. This file will store the generated optical flow data.
+5.  **Analyze Video:** Start the **video analysis** process. The tool automatically generates sparse optical flow data.
+
+***
+
+#### 2. Initial Mesh Alignment and Masking
+
+Align the 3D mesh with the object in the footage and define areas to exclude from tracking.
+
+1.  **Set Focal Length:** Adjust the camera's **focal length** in the tracker settings if the value is known.
+2.  **Enter Bin Mode:** Activate **bin mode** to begin manual alignment.
+3.  **Align Mesh:** Create and drag **bins** (2D points corresponding to 3D mesh locations) to align the imported mesh to the object visible in the video footage.
+4.  **Mask Geometry (Critical Step):** Press **M** to activate masking. Mask parts of the mesh that should not influence the track, such as:
+    * **Transparent areas** (e.g., windows).
+    * **Moving or deformable parts** (e.g., spinning wheels).
+    * **Inaccurate mesh areas**.
+
+***
+
+#### 3. Automatic Tracking and Inter-frame Correction
+
+Execute the primary tracking process, pausing to correct drift as needed.
+
+1.  **Start Automatic Tracking:** Use the **automatic tracker** function to track forward or backward through the timeline.
+2.  **Stop and Correct Drift:** If the mesh begins to **drift** away from the object in the footage:
+    * Stop the tracking process.
+    * Re-enter **bin mode** to manually correct the object's pose at that specific key frame.
+    * Run **refinement** on the segment tracked so far to adjust the motion between the corrected key frame and the last known good position.
+3.  **Repeat:** Continue alternating between automatic tracking, manual correction, and segment refinement until the desired portion of the video is covered.
+
+***
+
+#### 4. Final Global Refinement
+
+Execute a final optimization pass for maximum global consistency.
+
+1.  **Refine Entire Segment:** Run a comprehensive **global refinement** on the entire tracked section. This utilizes factor graph optimization to jointly minimize reprojection error across all frames, ensuring globally consistent motion.
+
+**Tutorial Video:** [https://www.youtube.com/watch?v=W4HNmcjFuLw](https://www.youtube.com/watch?v=W4HNmcjFuLw)
 
 ---
 
