--- a/docs/tools-addons-techniques/addons/sun-position.mdx
+++ b/docs/tools-addons-techniques/addons/sun-position.mdx
@@ -14,7 +14,6 @@ tags: [lighting, sun, environment, built-in]
 <div style={{display: 'flex', justifyContent: 'space-between', alignItems: 'center', flexWrap: 'wrap', marginBottom: '20px', gap: '15px'}}>
   <div style={{display: 'flex', gap: '8px', flexWrap: 'wrap'}}>
     <span style={{backgroundColor: '#4caf50', color: 'white', padding: '4px 10px', borderRadius: '12px', fontSize: '12px', fontWeight: 'bold'}}>BEGINNER</span>
-    <span style={{backgroundColor: '#ff9800', color: 'white', padding: '4px 10px', borderRadius: '12px', fontSize: '12px', fontWeight: 'bold'}}>LIGHTING</span>
   </div>
   <div style={{display: 'flex', alignItems: 'center', gap: '6px', color: '#666', fontSize: '14px', whiteSpace: 'nowrap'}}>
     <span style={{fontSize: '16px'}}>📖</span>
@@ -24,60 +23,79 @@ tags: [lighting, sun, environment, built-in]
 
 ---
 
+<div style={{
+  position: 'relative',
+  paddingBottom: '56.25%',
+  height: 0,
+  overflow: 'hidden',
+  maxWidth: '100%',
+  marginBottom: '30px',
+  borderRadius: '8px',
+  boxShadow: '0 4px 6px rgba(0,0,0,0.1)'
+}}>
+  <iframe
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+      border: 0
+    }}
+    src="https://www.youtube.com/embed/3ejQ8T9WJ3M"
+    title="YouTube video player"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen>
+  </iframe>
+</div>
+
 ## Introduction
 
-The Sun Position addon allows you to simulate real-world lighting conditions. You can set the time of day, date, and geographic location (latitude/longitude) to position the sun accurately. This is critical for forensic reconstruction where lighting conditions must match a specific time and place.
+The Sun Position feature in Blender is a critical tool for achieving photorealistic and geographically accurate lighting simulations. When combined with the Nishita Sky Texture, it resolves the texture's primary limitation by allowing users to precisely control the sun's location on the celestial sphere.
+
+**Benefits for Visual Investigation:**
+
+For visual investigation, such as architectural visualization or forensic analysis, this add-on offers high-fidelity simulation:
+
+- **Real-World Accuracy:** You can set the sun's position for any specific date and time (e.g., 9 AM on the Winter Solstice) using real geographic coordinates, eliminating the frustration of manual calculation.
+
+- **Shadow Analysis:** It enables key design and investigation decisions by allowing you to visualize exactly how shadows shift in your scene as you adjust the building's orientation (North Offset).
+
+- **Interior Daylight Rendering:** The most important application is the ability to generate interior daylight renderings. This lets you visualize and predict how a room or space will be illuminated at specific times of the year, which is crucial for design evaluation and planning.
 
 ---
 
 ## Key Features
 
-<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(280px, 1fr))', gap: '20px', marginBottom: '30px'}}>
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#8DF917', padding: '15px', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-clock" style={{fontSize: '20px', color: '#333'}}></i>
-      <h4 style={{margin: 0, color: '#333'}}>Time & Date</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Set the exact time and date to simulate the sun's position for any moment in history.</p>
-    </div>
-  </div>
+import FeatureCard from '@site/src/components/FeatureCard';
+import FeatureCardGrid from '@site/src/components/FeatureCardGrid';
+
+<FeatureCardGrid>
+  <FeatureCard 
+    title="Time & Date" 
+    headerColor="#6dfb72"
+    textColor="#333"
+    icon="fa-solid fa-clock"
+  >
+    <p style={{margin: 0}}>Set the exact time and date to simulate the sun's position for any moment in history.</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#1C75BC', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-location-dot" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>Geolocation</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Input Latitude and Longitude coordinates to place your scene anywhere on Earth.</p>
-    </div>
-  </div>
+  <FeatureCard 
+    title="Geolocation" 
+    headerColor="#1C75BC"
+    icon="fa-solid fa-location-dot"
+  >
+    <p style={{margin: 0}}>Input Latitude and Longitude coordinates to place your scene anywhere on Earth.</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#EF4C3C', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-sun" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>HDR Sync</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Synchronize the sun object with an Environment Texture (HDRI) for realistic lighting.</p>
-    </div>
-  </div>
-</div>
+  <FeatureCard 
+    title="HDR Sync" 
+    headerColor="#EF4C3C"
+    icon="fa-solid fa-sun"
+  >
+    <p style={{margin: 0}}>Synchronize the sun object with an Environment Texture (HDRI) for realistic lighting.</p>
+  </FeatureCard>
+</FeatureCardGrid>
 
 ---
 
@@ -91,7 +109,28 @@ This addon is included with Blender.
 3. Enable the checkbox.
 
 ### Usage
-Go to the **World Properties** tab in the Properties Editor. Scroll down to find the **Sun Position** panel. You can assign a Sun object and a Sky Texture, then adjust the time and location settings.
+
+**Step-by-Step Guide: How to Use the Sun Position Add-on**
+
+1. **Open Settings:** In Blender, navigate to the **World Properties** tab and expand the **Sun Position** section.
+
+2. **Set Usage Mode:** Ensure the **Usage Mode** is set to **Normal**.
+
+3. **Select Sky Model:** Select **Sky Texture** from the list of options to ensure the add-on controls the Nishita sun disk.
+
+4. **Visualize True North (Optional):** Enable the **North** option to display the direction of true north, helping you confirm your scene's orientation.
+
+5. **Enter Geolocation:** In the **Location** section, input the geographic coordinates.
+   - You can right-click on a location in Google Maps, select the coordinates, and paste the value into Blender's coordinates field.
+   - Alternatively, manually enter the coordinates into the **Longitude** and **Latitude** fields.
+
+6. **Set North Offset:** In the **North Offset** view, rotate the entire scene to align it with true north.
+
+7. **Set Time Zone and DST:** In the **Time** section, check two things:
+   - Determine the Coordinated Universal Time (UTC) offset for your location.
+   - Determine if Daylight Saving Time (DST) is currently applied in your region and check the corresponding box.
+
+8. **Set Date and Time:** Finally, adjust the date (e.g., June 21st) and the time (e.g., 9:00 AM) to accurately position the sun for your rendering.
 
 ---
 
