--- a/docs/tools-addons-techniques/addons/vr-scene-inspection.mdx
+++ b/docs/tools-addons-techniques/addons/vr-scene-inspection.mdx
@@ -14,7 +14,6 @@ tags: [vr, virtual-reality, inspection, built-in]
 <div style={{display: 'flex', justifyContent: 'space-between', alignItems: 'center', flexWrap: 'wrap', marginBottom: '20px', gap: '15px'}}>
   <div style={{display: 'flex', gap: '8px', flexWrap: 'wrap'}}>
     <span style={{backgroundColor: '#2196f3', color: 'white', padding: '4px 10px', borderRadius: '12px', fontSize: '12px', fontWeight: 'bold'}}>INTERMEDIATE</span>
-    <span style={{backgroundColor: '#9c27b0', color: 'white', padding: '4px 10px', borderRadius: '12px', fontSize: '12px', fontWeight: 'bold'}}>VR / XR</span>
   </div>
   <div style={{display: 'flex', alignItems: 'center', gap: '6px', color: '#666', fontSize: '14px', whiteSpace: 'nowrap'}}>
     <span style={{fontSize: '16px'}}>📖</span>
@@ -24,60 +23,86 @@ tags: [vr, virtual-reality, inspection, built-in]
 
 ---
 
+<div style={{
+  position: 'relative',
+  paddingBottom: '56.25%',
+  height: 0,
+  overflow: 'hidden',
+  maxWidth: '100%',
+  marginBottom: '30px',
+  borderRadius: '8px',
+  boxShadow: '0 4px 6px rgba(0,0,0,0.1)'
+}}>
+  <iframe
+    style={{
+      position: 'absolute',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+      border: 0
+    }}
+    src="https://www.youtube.com/embed/quXJbxULMTg"
+    title="YouTube video player"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen>
+  </iframe>
+</div>
+
 ## Introduction
 
-This addon provides a way to view your scene in Virtual Reality directly from the Blender viewport. It uses the OpenXR standard, making it compatible with a wide range of headsets. This allows for immersive inspection of scale and space.
+The VR scene inspection is a default Blender add-on that allows users to explore and inspect their 3D projects within Virtual Reality (VR).
+
+This functionality turns the Blender viewport into an immersive, three-dimensional environment, enabling users to:
+
+- Walk around their models or animations as if they were in the scene.
+- Inspect models for details and errors (e.g., checking for hollow areas or detached geometry in models intended for 3D printing).
+- Manipulate the scene or models using motion controllers.
+
+**For Visual Investigation and Forensic Analysis:**
+
+VR scene inspection offers significant advantages for professionals conducting visual investigations:
+
+- **Immersive Scene Presence:** Place yourself directly at the scene of an incident, experiencing spatial relationships and sightlines as if physically present, which reveals insights impossible to grasp from 2D screens or static images.
+- **Witness Collaboration:** Guide witnesses through reconstructed scenes in VR to help them recall details, verify perspectives, and clarify their testimonies by allowing them to virtually "return" to the location.
+- **Spatial Understanding:** Assess distances, angles, and visibility factors with natural human perception rather than abstract measurements, improving accuracy in crime scene reconstruction and accident analysis.
+- **Evidence Presentation:** Communicate complex spatial scenarios to investigators, attorneys, or juries by allowing them to experience the scene first-hand, making evidence more compelling and understandable.
+- **Scale Verification:** Toggle between different scales to examine both overview perspectives and minute details, ensuring nothing is overlooked in the investigation.
+- **Non-Destructive Analysis:** Explore and test multiple hypotheses within the virtual scene without disturbing physical evidence or requiring repeated site visits.
 
 ---
 
+import FeatureCard from '@site/src/components/FeatureCard';
+import FeatureCardGrid from '@site/src/components/FeatureCardGrid';
+
 ## Key Features
 
-<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(280px, 1fr))', gap: '20px', marginBottom: '30px'}}>
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#8DF917', padding: '15px', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-vr-cardboard" style={{fontSize: '20px', color: '#333'}}></i>
-      <h4 style={{margin: 0, color: '#333'}}>VR Viewport</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Toggle a VR session to view your scene in 3D through your headset.</p>
-    </div>
-  </div>
+<FeatureCardGrid>
+  <FeatureCard 
+    title="VR Viewport" 
+    headerColor="#6dfb72"
+    textColor="#333"
+    icon="fa-solid fa-vr-cardboard"
+  >
+    <p style={{margin: 0}}>Toggle a VR session to view your scene in 3D through your headset.</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#1C75BC', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-person-walking" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>Positional Tracking</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Supports 6DoF tracking, allowing you to walk around and lean into your model.</p>
-    </div>
-  </div>
+  <FeatureCard 
+    title="Positional Tracking" 
+    headerColor="#1C75BC"
+    icon="fa-solid fa-person-walking"
+  >
+    <p style={{margin: 0}}>Supports 6DoF tracking, allowing you to walk around and lean into your model.</p>
+  </FeatureCard>
   
-  <div style={{
-    border: '1px solid #e0e0e0',
-    borderRadius: '8px',
-    overflow: 'hidden',
-    boxShadow: '0 2px 4px rgba(0,0,0,0.1)'
-  }}>
-    <div style={{backgroundColor: '#EF4C3C', padding: '15px', color: 'white', display: 'flex', alignItems: 'center', gap: '10px'}}>
-      <i className="fa-solid fa-bookmark" style={{fontSize: '20px'}}></i>
-      <h4 style={{margin: 0}}>Landmarks</h4>
-    </div>
-    <div style={{padding: '20px'}}>
-      <p style={{margin: 0}}>Set up specific camera positions (landmarks) to quickly jump between viewpoints in VR.</p>
-    </div>
-  </div>
-</div>
+  <FeatureCard 
+    title="Landmarks" 
+    headerColor="#EF4C3C"
+    icon="fa-solid fa-bookmark"
+  >
+    <p style={{margin: 0}}>Set up specific camera positions (landmarks) to quickly jump between viewpoints in VR.</p>
+  </FeatureCard>
+</FeatureCardGrid>
 
 ---
 
@@ -91,7 +116,25 @@ This addon is included with Blender.
 3. Enable the checkbox.
 
 ### Usage
-Open the Sidebar (N-panel) and find the **VR** tab. Click **Start VR Session** to begin. Ensure your headset is connected and recognized by your OS (e.g., via SteamVR or Oculus app).
+
+**Step-by-Step Guide: Using the VR Add-on**
+
+1. **Connect VR Headset:** Connect your VR headset (such as an Oculus Quest) to your computer. The video suggests using SteamVR for the best compatibility, ensuring that SteamVR is running and both the headset and controllers are connected.
+
+2. **Enable Add-on:**
+   - Go into Blender's Preferences.
+   - Use the search bar and type "VR".
+   - Enable the "VR Scene Inspection" add-on by clicking the checkbox.
+
+3. **Access the VR Panel:** Press the **N** key in the 3D viewport to open the side panel, and look for the VR section at the bottom.
+
+4. **Mirror the Session (Optional):** If you intend to record or view the VR session on your computer monitor, click "Mirror VR session".
+
+5. **Start VR Session:** Click the "Start VR session" button to enter the virtual environment.
+
+6. **Inspect and Interact:** Once in VR, use your motion controllers to interact with the scene, which may include scaling the model to view it at different sizes (e.g., miniature or massive), and physically moving to inspect details.
+
+7. **Stop VR Session:** When finished, click "Stop VR session" to exit the VR environment and return to the standard Blender workflow.
 
 ---
 
